--- a/requirements.txt
+++ b/requirements.txt
@@ -18,12 +18,14 @@ django-widget-tweaks==1.5.0
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.5.0
 fonttools==4.60.1
+gunicorn==23.0.0
 idna==3.10
 import-export==0.3.1
 importlib_metadata==8.6.1
 iyzipay==1.0.45
 Markdown==3.7
 oauthlib==3.2.2
+packaging==25.0
 pillow==11.1.0
 pycparser==2.23
 pydyf==0.11.0
